<resources>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="default_page_number_indicator_text_template">Page #i of #N</string>
    <string name="default_page_number_indicator_start_button_text">Start</string>
    <string name="default_page_number_indicator_end_button_text">End</string>
    <string name="default_page_number_indicator_previous_button_text">Previous</string>
    <string name="default_page_number_indicator_next_button_text">Next</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="app_name">Famous Quotes</string>
    <string name="md__drawerOpenIndicatorDesc">Close drawer</string>
    <string name="md__drawerClosedIndicatorDesc">Open drawer</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="app_id">598635240214474</string>
    <string name="app_namespace">azw_fbquotes</string>
    <string name="app_img_url">https://fbcdn-photos-d-a.akamaihd.net/hphotos-ak-xfp1/t39.2081-0/p128x128/10333105_683654471712550_1549177778_n.png</string>
    <string name="app_store_url">https://play.google.com/store/apps/details?id=com.azwstudios.famousbrilliantquotes</string>
    <string name="app_paypal">alfredo.zurich@gmail.com</string>
    <string name="app_dbname">FamousQuotes_v2.db</string>
    <string name="app_dbfolder">db</string>
    <string name="ID_Banner">ca-app-pub-9562921355494551/7805689225</string>
    <string name="ID_Interticial">ca-app-pub-9562921355494551/1759155621</string>
    <string name="app_splashlogo">Famous Quotes</string>
    <string name="app_name2">Quotes, Sayings and Proverbs to inspire...</string>
    <string name="app_author">Warp Studios 2014</string>
    <string name="Version">v2.00</string>
    <string name="Quote">Quote</string>
    <string name="Quotes">Quotes</string>
    <string name="Page">Page</string>
    <string name="Of">of</string>
    <string name="DB_Loading">Extracting data, please wait...</string>
    <string name="DB_Loading2">Loading...</string>
    <string name="DB_Error">An error occurred while upgrading the quotes database.</string>
    <string name="DB_Error2">Retry</string>
    <string name="DB_Error3">Exit</string>
    <string name="DB_ErrorFav">Empty</string>
    <string name="FB_Title">Facebook</string>
    <string name="FB_SubTitle">Post on your wall</string>
    <string name="FB_In">Log in</string>
    <string name="FB_Out">Log out</string>
    <string name="FB_Shared">Posted on your wall!</string>
    <string name="FB_Error">Unable to post on your wall</string>
    <string name="FB_Error2">Unable to connect with Facebook</string>
    <string name="FB_Error3">"You didn't accept read permissions"</string>
    <string name="FB_Sharing">Posting</string>
    <string name="FB_Wait">Please wait...</string>
    <string name="FB_LoggedIn">You are logged in</string>
    <string name="FB_LoggedOut">You are logged out</string>
    <string name="Menu1">MAIN MENU</string>
    <string name="Menu2">OPTIONS</string>
    <string name="Nav_1">Featured Authors</string>
    <string name="Nav_2">Random Quotes</string>
    <string name="Nav_3">Authors</string>
    <string name="Nav_4">Favorites</string>
    <string name="Opt_1">Settings</string>
    <string name="Opt_2">Rate</string>
    <string name="Opt_3">Share this App</string>
    <string name="Opt_4">Contact us</string>
    <string name="Action_Favorito">Favorite</string>
    <string name="Action_Exportar">Export</string>
    <string name="Action_Facebook">Facebook</string>
    <string name="Action_Copiar">Copy</string>
    <string name="Action_Copiar2">has been copied to clipboard!</string>
    <string name="Action_Enviar">Send</string>
    <string name="Action_Aleatorio">Random</string>
    <string name="About_Text_1">Famous &amp; Brilliant Quotes is a collection of more than 13.000 carefully selected sayings from philosophers, writers, intellectuals and other great whose words have inspired many people around the world. I hope that this App makes your day and that it becomes a source of reflection and inspiration.</string>
    <string name="Settings_Category_1">SHARE &amp; SEND QUOTES</string>
    <string name="Settings_Title_11">Facebook privacy</string>
    <string name="Settings_Subtitle_11">Choose your privacy settings to post quotes on your wall</string>
    <string name="Settings_Dialogtitle_11">Share with:</string>
    <string name="Settings_Title_12">Display author</string>
    <string name="Settings_Subtitle_12">Attach author when sharing or sending a quote</string>
    <string name="Settings_Category_2">DISPLAY</string>
    <string name="Settings_Title_21">Quotes database</string>
    <string name="Settings_Subtitle_21">Use styled cards for displaying quotes in the database (recomended for Tablets)</string>
    <string name="Settings_Title_22">Keep screen on</string>
    <string name="Settings_Subtitle_22">Prevent the screen from turning off while reading</string>
    <string name="Settings_Title_23">Hide status bar</string>
    <string name="Settings_Subtitle_23">You have to restart the App for this change to take effect</string>
    <string name="Settings_Category_3">VISUAL EFFECTS</string>
    <string name="Settings_Title_31">Screen transitions</string>
    <string name="Settings_Subtitle_31">Use smooth transitions between screens</string>
    <string name="Settings_Title_32">Animated swipe effects</string>
    <string name="Action_Ok">Ok</string>
    <string name="Action_Cancel">Cancel</string>
    <string name="Action_Borrar">Clear</string>
    <string name="Action_Compartir">Post</string>
    <string name="Action_Cancelar">Cancel</string>
</resources>