<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/frame" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/quote_layout" android:background="@drawable/abs__dialog_full_holo_dark" android:layout_width="@dimen/dialog_width" android:layout_height="wrap_content" android:contentDescription="TODO">
        <RelativeLayout android:orientation="horizontal" android:background="@drawable/ab_transparent_actionbar" android:layout_width="fill_parent" android:layout_height="64.0dip" android:baselineAligned="false" android:layout_weight="0.0">
            <ImageView android:id="@id/iv_logosmall" android:paddingLeft="8.0dip" android:paddingTop="8.0dip" android:paddingRight="4.0dip" android:paddingBottom="8.0dip" android:layout_width="56.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_launcher" android:scaleType="centerInside" android:layout_alignParentLeft="true" android:contentDescription="@string/app_name2" />
            <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/TitleText_Layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_toLeftOf="@id/btn_login" android:layout_toRightOf="@id/iv_logosmall">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="bottom" android:id="@id/tv_category" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/FB_Title" android:singleLine="true" />
                <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="top" android:id="@id/tv_author" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/FB_SubTitle" android:singleLine="true" />
            </LinearLayout>
            <Button android:textColor="@android:color/primary_text_dark" android:id="@id/btn_login" android:background="@drawable/holocolors_list_selector_holo_dark" android:paddingLeft="8.0dip" android:paddingTop="8.0dip" android:paddingRight="16.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/FB_In" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/contentLayout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
                <ScrollView android:id="@id/scrollView1" android:scrollbars="none" android:fadingEdge="none" android:fadingEdgeLength="0.0dip" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" android:layout_centerHorizontal="false">
                    <LinearLayout android:orientation="vertical" android:id="@id/textLayout" android:padding="@dimen/mediumpading" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="@dimen/fontsize_medium_1" android:gravity="center" android:id="@id/tv_quote" android:paddingTop="@dimen/mediumpading" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                        <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="@dimen/fontsize_small_1" android:gravity="right" android:id="@id/tv_autor" android:paddingLeft="@dimen/mediumpading" android:paddingTop="8.0dip" android:paddingRight="@dimen/mediumpading" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" />
                    </LinearLayout>
                </ScrollView>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout android:id="@id/buttonsLayout" android:background="@drawable/abs__ab_bottom_transparent_dark_holo" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_weight="0.0">
            <Button android:textAppearance="?android:textAppearanceSmall" android:textColor="@android:color/primary_text_dark" android:id="@id/btn_ok" android:background="@drawable/holocolors_list_selector_holo_dark" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/Action_Compartir" android:layout_weight="1.0" />
            <View android:id="@id/View02" android:background="@color/dark_divider" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:layout_weight="0.0" />
            <Button android:textAppearance="?android:textAppearanceSmall" android:textColor="@android:color/primary_text_dark" android:id="@id/btn_cancel" android:background="@drawable/holocolors_list_selector_holo_dark" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/Action_Cancelar" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>