<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="10.0"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="5.0">
        <View android:id="@id/colorView" android:background="@color/ascent_color" android:layout_width="wrap_content" android:layout_height="4.0dip" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/imageView1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/splash2" android:scaleType="centerCrop" android:adjustViewBounds="true" />
            <LinearLayout android:orientation="vertical" android:id="@id/top" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
                <com.devspark.robototextview.widget.RobotoTextView android:textSize="12.0sp" android:textColor="@color/font_color3" android:gravity="right" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_author" app:typeface="roboto_medium" />
                <com.devspark.robototextview.widget.RobotoTextView android:textSize="12.0sp" android:textColor="@color/font_color3" android:gravity="left" android:id="@id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Version" app:typeface="roboto_medium" />
            </LinearLayout>
            <LinearLayout android:gravity="bottom|center|right" android:orientation="vertical" android:id="@id/bottom" android:background="@color/selected_color2" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
                <com.devspark.robototextview.widget.RobotoTextView android:textAppearance="?android:textAppearanceLarge" android:textSize="24.0sp" android:textColor="@color/font_color1" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_splashlogo" android:maxLines="1" android:shadowColor="@color/black_shadow" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="1.0" app:typeface="roboto_regular" />
            </LinearLayout>
        </RelativeLayout>
        <View android:id="@id/View01" android:background="@color/ascent_color" android:layout_width="wrap_content" android:layout_height="4.0dip" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="2.5">
        <ProgressBar android:id="@id/progressBar1" android:layout_width="32.0dip" android:layout_height="32.0dip" style="?android:attr/progressBarStyle" />
    </LinearLayout>
</LinearLayout>